<resources>
    <string name="app_name">Jokris EzyFoods</string>
    <string name="home_drinks">Drinks</string>
    <string name="home_snacks">Snacks</string>
    <string name="home_foods">Foods</string>
    <string name="order">Order</string>
    <string name="top_up">Top Up</string>
    <string name="home_name">By Jokris</string>
    <string name="menu">Menu</string>
    <string name="home_notes">Tap the image to see menu\'s details</string>
    <string name="my_order">My Order</string>
    <string name="menu_tea">Tea</string>
    <string name="menu_milk">Milk</string>
    <string name="bottled_water">Bottled Water</string>
    <string name="menu_notes">Tap the image to order</string>
    <string name="mango_juice">Mango Juice</string>
    <string name="title_activity_order">OrderActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="quantity">Quantity</string>
    <string name="premium_tea">Premium Tea</string>
    <string name="pay_now">Pay Now</string>
    <string name="main_menu">Main Menu</string>
    <string name="placeholder_price">Rp 1.000.000</string>
    <string name="Cart">Cart</string>
</resources>
