<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.OrderActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/txt_order_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="100dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/premium_tea"
            android:textAlignment="center"
            android:textSize="12pt" />

        <ImageView
            android:id="@+id/img_order_selected"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            app:srcCompat="@drawable/drink_tea" />

        <TextView
            android:id="@+id/txt_order_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rp 98.000"
            android:textSize="11pt"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txt_label_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/quantity"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextOrderQty"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:autofillHints="Qty"
            android:labelFor="@id/txt_label_quantity"/>

        <Button
            android:id="@+id/btn_order"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/order"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>